# savor_app

./: .easignore  .gitignore  README.md  docker-compose.yml  start.sh  stop.sh
backend/: .gitignore  README.md  database.py  main.py  pyproject.toml
backend/backend/: __init__.py  api.py  chat.py  chat_history_model.py  config.py  database.py  ingredient_model.py  login_manager.py  main.py  recipe.py  recipe_ingredient_model.py  recipe_model.py  user.py  user_model.py
backend/backend/models/: chat_group_model.py  chat_history_model.py  ingredient_model.py  recipe_ingredient_model.py  recipe_model.py  user_model.py
backend/test/: database_test.py  test_config.py  user_test.py
backend/test/integration_test/: bootstrap_coverage_integration_test.py  config_integration_test.py  conftest.py  logging_integration_test.py  model_test.py  test_config.py  user_integration_test.py
backend/test/integration_test/chat/: chat_test.py  create_new_group_test.py  get_all_group_test.py  get_chat_history_test.py
backend/test/integration_test/recipe/: get_all_recipe_test.py  get_all_recipe_unit_test.py  get_recipe_by_id_test.py  get_recipe_by_id_unit_test.py
backend/test/integration_test/user/: user_create_test.py  user_create_unit_test.py  user_login_test.py  user_login_unit_test.py
backend/test/unit_test/: conftest.py  init_unit_test.py  model_unit_test.py  test_backend_config.py  test_config.py  test_main.py  user_create_unit_test.py  user_login_unit_test.py  user_unit_test.py
backend/test/unit_test/chat/: chat_unit_test.py  create_new_group_unit_test.py  get_all_group_unit_test.py  get_chat_history_unit_test.py  test_build_mock_response_and_no_ingredient.py  test_logging.py
backend/test/unit_test/recipe/: get_all_recipe_unit_test.py  get_recipe_by_id_unit_test.py  test_recipe_logging.py
backend/test/unit_test/user/: test_user_logging.py  user_create_unit_test.py  user_login_unit_test.py
frontend/: .gitignore  app.json  babel.config.js  eslint.config.js  global.css  jest.config.js  jest.setup.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
frontend/__tests__/: index_test.tsx
frontend/app/: chatPage.tsx  createUserPage.tsx  index.tsx  loginPage.tsx
frontend/src/__tests__/: allRecipePage_test.tsx  apiClient_test.ts  apiModules_test.ts  appPages_test.tsx  chatHistoryPage_test.tsx  chatPage_test.tsx  createUserPage_test.tsx  index_test.tsx  login_test.tsx  recipePage_test.tsx  styledHeader_test.tsx
frontend/src/__tests__/integration/: README.md  appRoutes.integration.test.tsx  backendPages.integration.test.tsx
frontend/src/api/: apiRequestError.ts  auth.ts  chat.ts  client.ts  index.ts  recipe.ts
frontend/src/app/: _layout.tsx  allRecipePage.tsx  allRecipeTestingPage.tsx  chatHistoryPage.tsx  chatHistoryTestingPage.tsx  chatPage.tsx  chatTestingPage.tsx  createUserPage.tsx  functionTestingPage.tsx  index.tsx  loginPage.tsx  recipePage.tsx  recipeTestingPage.tsx  speechTestingPage.tsx
frontend/src/app/(tabs)/: _layout.tsx  allRecipePage.tsx  chatPage.tsx
frontend/src/components/: styledHeader.tsx  styleeheader.tsx
frontend/src/hooks/: useSpeechToText.ts  useTextToSpeech.ts
frontend/src/screens/: allRecipePage.tsx  allRecipeTestingPage.tsx  chatHistoryPage.tsx  chatHistoryTestingPage.tsx  chatPage.tsx  chatTestingPage.tsx  createUserPage.tsx  functionTestingPage.tsx  index.ts  loginPage.tsx  recipePage.tsx  recipeTestingPage.tsx  speechTestingPage.tsx
frontend/src/style/: globalStyle.ts
frontend/src/types/: chatGroup.ts  index.ts  recipe.ts  user.ts
frontend/src/types/response/: ChatHistoryResponse.ts  CreateChatGroupResponse.ts  DetailChatHistory.ts  allChatGroupResponse.ts  allRecipeResponse.ts  chatResponse.ts  createUserResponse.ts  index.ts  loginResponse.ts  recipeResponse.ts
models/AI_cooking_agent/: .gitignore  QUICK_REFERENCE.md  classification_strategy.py  db_utils.py  main.py  question_strategy.py  recipe_assistant.py  recipe_generation_strategy.py  recipe_retriever.py
models/AI_cooking_agent/tests/: test_recipe_retriever.py  test_table_dropping_example.py
models/conversional_model/: main.py  pyproject.toml
models/image_generation_model/: .dockerignore  .gitignore  Dockerfile  compute_image_score.py  convert.py  create_folder.py  docker.sh  image_caption.py  image_generation_model.py  main.py  process_data.py  pyproject.toml  run_model.py  test_model.py  yesy.py
models/recipe_generation_model/: .gitignore  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  TABLE_DROPPING.md  chain_strategy.py  classification_strategy.py  db_utils.py  fine-tune.py  main.py  process_data.py  pyproject.toml  question_strategy.py  recipe_assistant.py  recipe_generation_strategy.py  recipe_retriever.py  test_llm.py  vector_db.py
models/recipe_generation_model/tests/: conftest.py  test_recipe_assistant.py  test_recipe_retriever.py
models/recipe_generation_model/unused/: fine-tune.py  process_data.py
