[project]
name = "image-generation-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.12.0",
    "diffusers>=0.36.0",
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "ftfy>=6.3.1",
    "opencv-python>=4.12.0.88",
    "peft>=0.18.1",
    "pillow>=12.0.0",
    "pip>=25.3",
    "regex>=2025.11.3",
    "torch>=2.9.1",
    "torchmetrics==1.8.2",
    "torchvision>=0.24.1",
    "tqdm>=4.66.5",
    "transformers>=4.57.3",
]

[[tool.uv.index]]
name = "torch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "torchvision"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

