[project]
name = "recipe-generation-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=3.6.0",
    "langchain>=1.2.6",
    "langchain-chroma>=1.1.0",
    "langchain-ollama>=1.0.1",
    "ollama>=0.6.1",
    "polars>=1.37.1",
    "scipy>=1.17.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.6",
]


[[tool.uv.index]]
name = "torch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "torchvision"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
